# BoostStudio

./: .gitignore  BoostStudio.sln  BoostStudio.slnx  Directory.Build.props  Directory.Packages.props  README.md  docker-compose.yml  global.json
.github/: FUNDING.yml
.github/workflows/: build.yml  cicd.yml
src/Application/: Application.csproj  DependencyInjection.cs  GlobalUsings.cs
src/Client/: .dockerignore  .env.development  .prettierignore  Dockerfile  (+14 more)
src/Client/src-tauri/: Cargo.toml  tauri.conf.json
src/Client/src-tauri/binaries/wwwroot/: index.html  index.html.br
src/Client/src-tauri/binaries/wwwroot/assets/: AutoForm-Ct6SXXji.js  AutoForm-Ct6SXXji.js.br  _patchId-DRo4-quX.js  _patchId-DRo4-quX.js.br  ammo-CJqrowHh.js  ammo-CJqrowHh.js.br  ammo-Zdt9Oyab.js  ammo-Zdt9Oyab.js.br  ammo-list-DP1yu7pY.js  ammo-list-DP1yu7pY.js.br  assets-BLFGnjHC.js  assets-BLFGnjHC.js.br  assets-DEmwRBy9.js  assets-DEmwRBy9.js.br  badge-BRKXVVmH.js  badge-BRKXVVmH.js.br  card-5a8OwMZI.js  card-5a8OwMZI.js.br  check-CUgUruzn.js  check-CUgUruzn.js.br  columns-BlpQJy-L.js  columns-BlpQJy-L.js.br  command-Cnu_HUkU.js  command-Cnu_HUkU.js.br  composition-D2Mlinab.js  composition-D2Mlinab.js.br  constants-BO8B297w.js  constants-BO8B297w.js.br  constants-Ch2OuaxH.js  constants-Ch2OuaxH.js.br  enhanced-button-CUT0MAbl.js  enhanced-button-CUT0MAbl.js.br  fhm-QIOTPG_X.js  fhm-QIOTPG_X.js.br  hash-input-BmZZ7wAd.js  hash-input-BmZZ7wAd.js.br  hitboxes-BHtMOKo1.js  hitboxes-BHtMOKo1.js.br  hitboxes-DO5F9iWi.js  hitboxes-DO5F9iWi.js.br  (+101 more)
src/Client/src-tauri/binaries/wwwroot/assets/units/small-icons/: 1011.dds
src/Client/src-tauri/capabilities/: default.json
src/Client/src-tauri/src/: lib.rs  main.rs  sidecar.rs  window_listener.rs
(+1370 files in other folders)
